# orchid-continuum

./: .env.example  .gitignore  .replit  BREEDER_PRO_ORCHESTRATOR_README.md  COPYRIGHT.txt  DEPLOYMENT_GUIDE.md  Dockerfile  GALLERY_FILES_TOMORROW.txt  GOOGLE_CLOUD_INTEGRATION.md  INVENTORY.md  LICENSE  MANUAL_MIGRATION_STEPS.txt  ORCHID_CONTINUUM_BOARD_PRESENTATION.md  OrchidContinuum_FullAutonomous_StatsPlots.py  OrchidContinuum_FullPipeline.py  PARTNERSHIP_README.md  README.md  WIDGETIZATION_PLAN.md  WIDGET_DIAGNOSTIC_REPORT.md  _redirects  admin_control_center.py  admin_monitoring_dashboard.py  admin_notification_service.py  admin_orchid_approval.py  admin_svo_research.py  admin_system.py  advanced_filtering_system.py  advanced_gallery_routes.py  advanced_orchid_scrapers.py  advanced_photo_editor.py  aggressive_collection.py  ai_analysis_results.json  ai_batch_processor.py  ai_breeder_assistant_pro.py  ai_collection_manager.py  ai_collection_onboarding.py  ai_legal_entity.py  ai_orchid_chat.py  ai_orchid_identification.py  ai_orchid_routes.py  (+427 more)
analyzer/: __init__.py  analyzer.py  processor.py  visualizer.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-FCOS-Orchid-Trivia-t-1756440451099_1756440451099.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-The-Orchid-Continuum-Proje-1755906486405_1755906486405.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-utf-8-meta-name-viewport-content-widt-1756440257952_1756440257952.txt  Pasted--FCOS-Orchid-Continuum-one-shot-setup-Use-paste-this-whole-block-into-your-terminal-R-1757657397029_1757657397030.txt  Pasted--Fully-Self-Contained-SVO-Scraper--1758018882819_1758018882819.txt  Pasted--ORBIT-RAYS-VIEW-Orchid-Continuum-Weather-Habitat-Widget-style-oc-orbit-wrap-font-f-1756241134849_1756241134849.txt  Pasted--Orchid-Atlas-Gallery-One-Page-Spec-Date-2025-08-24-Goal-Map-first-exploration-of-orch-1756054076589_1756054076589.txt  Pasted--Orchid-Continuum-Breeder-Pro-One-Click-Orchestrator-Full-pipeline-Scrape-Organize-Analyze--1758014268895_1758014268896.txt  Pasted--Orchid-Continuum-POC-Widget-Online-Orchid-Lab-single-file-app--1756239042888_1756239042888.txt  Pasted--Orchid-Continuum-Para-1756229494563_1756229494563.txt  Pasted--Orchid-Continuum-quick-installer-This-creates-a-new-lab-project-page-a-weather-widget--1757462651583_1757462651583.txt  Pasted--OrchidContinuum-FullAutonomous-StatsPlots-py-Ultimate-self-evolving-Orchid-Continuum-pipeline--1758066725526_1758066725526.txt  Pasted--Sent-from-the-all-new-AOL-app-for-iOS-Begin-forwarded-message-On-Thursday-August-28-2025-8--1756437233562_1756437233562.txt  Pasted--Term-Labellum-Lip-Category-Floral-Organ-Definition-The-specializ-1758058619699_1758058619699.txt  Pasted--The-Philosophy-of-Orchids-Discover-Your-Growing-Style-For-centuries-humans-have-asked-life-s-gr-1757358100225_1757358100225.txt  Pasted--doctype-html-html-head-meta-charset-utf-8-title-Orchid-Continuum-Live-Data-Test-t-1757747410189_1757747410189.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta-name-viewport-content-widt-1757356168279_1757356168279.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-title-Orchid-Continuum-Breeder-Ass-1757188429886_1757188429887.txt  Pasted--main-py-Single-file-Orchid-Continuum-starter-with-SQLite-DB-created-at-startup-migration-i-1757450053684_1757450053684.txt  Pasted--monthKey-2025-08-categories-species-hybrids-cattleyas-intergenerics--1756320643790_1756320643790.txt  Pasted--orchid-continuum-full-py-import-os-import-time-import-json-import-math-import-requests-from-io-imp-1758012360276_1758012360277.txt  Pasted--orchid-continuum-master-py-import-os-time-json-from-io-import-BytesIO-from-urllib-parse-import-u-1758014221454_1758014221455.txt  (+97 more)
data/: 35p_species.json  (+5 more)
orchid-continuum-scaffold/: .env.example  README.md  docker-compose.dev.yml  pyproject.toml
orchid-continuum-scaffold/.github/workflows/: ci.yml
orchid-continuum-scaffold/apps/admin/: admin.js  index.html
orchid-continuum-scaffold/apps/widgets/: build.js
orchid-continuum-scaffold/apps/widgets/src/: map-viewer.js  orchid-of-day.js  weather-compare.js
orchid-continuum-scaffold/docs/public/: WIDGET_EMBEDDING.md
orchid-continuum-scaffold/infra/docker/: Dockerfile.ai-worker  Dockerfile.api  Dockerfile.ingest
orchid-continuum-scaffold/partner-connect/: README.md  setup.sh  test_geoprivacy.py
orchid-continuum-scaffold/partner-connect/apps/widgets/: package.json  vite.config.js
orchid-continuum-scaffold/partner-connect/apps/widgets/src/: main.js
orchid-continuum-scaffold/partner-connect/scripts/: gen_partner_key.py
orchid-continuum-scaffold/partner-connect/services/api/: main.py
orchid-continuum-scaffold/scripts/: init-db.sql
orchid-continuum-scaffold/services/ai-worker/: main.py
orchid-continuum-scaffold/services/api/: auth.py  config.py  database.py  main.py
orchid-continuum-scaffold/services/ingest/: main.py
(+739 files in other folders)
