[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "openai>=1.97.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.3",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "opencv-python>=4.11.0.86",
    "numpy>=2.3.2",
    "sendgrid>=6.12.4",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "pandas>=2.3.2",
    "anthropic>=0.64.0",
    "schedule>=1.2.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "shapely>=2.1.1",
    "playwright>=1.54.0",
    "pytesseract>=0.3.13",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
    "psutil>=7.0.0",
    "google-genai>=1.32.0",
    "pytz>=2025.2",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "alembic>=1.16.5",
    "python-jose[cryptography]>=3.5.0",
    "celery>=5.5.3",
    "redis>=6.4.0",
    "markdown>=3.8.2",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "fastapi>=0.116.1",
    "exifread>=3.5.1",
    "starlette>=0.47.3",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
    "networkx>=3.5",
    "aiohttp>=3.12.15",
    "geopy>=2.4.1",
    "python-levenshtein>=0.27.1",
    "jellyfish>=1.2.0",
    "fuzzywuzzy>=0.18.0",
]
